<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LicitatieNoua"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_numeProdus"
        android:hint="@string/nume_produs"
        android:layout_margin="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_descriereProdus"
        android:hint="@string/descriere_produs"
        android:layout_margin="16dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imagine"
        android:adjustViewBounds="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_image"
        android:text="@string/add_image"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_categorie"
        android:layout_margin="16dp"
        android:spinnerMode="dropdown"
        android:prompt="@string/sp_categorie"
        android:entries="@array/sp_choices"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pret"
        android:hint="@string/pret_pornire"
        android:layout_margin="16dp"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/et_nr_tel"
        android:hint="@string/nr_tel"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:id="@+id/et_oras"
        android:hint="@string/oras"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_produs"
        android:id="@+id/btn_add"/>
</LinearLayout>